--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,7 +27,7 @@ updates:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
 
   - package-ecosystem: "npm"
-    directory: "/services/ui"
+    directory: "/services/api"
     schedule:
       interval: "weekly"
     pull-request-branch-name:
