Revert "Run prettier over the workflows YAML config files"
This reverts commit 8f2f897a0a4dc3907483ebb91a2d2d5d29233ac7.

--- a/.github/workflows/data-cleanup-pr-images.yaml
+++ b/.github/workflows/data-cleanup-pr-images.yaml
@@ -4,9 +4,9 @@ on:
   pull_request:
     types: [closed]
     paths:
-      - "services/data/**"
-      - ".github/workflows/**"
-      - ".github/scripts/**"
+      - 'services/data/**'
+      - '.github/workflows/**'
+      - '.github/scripts/**'
 jobs:
   purge-ghcr-images:
     name: Cleanup PR images from ghcr.io
