--- a/.github/workflows/api-cleanup-pr-images.yaml
+++ b/.github/workflows/api-cleanup-pr-images.yaml
@@ -4,9 +4,9 @@ on:
   pull_request:
     types: [closed]
     paths:
-      - "services/api/**"
-      - ".github/workflows/**"
-      - ".github/scripts/**"
+      - 'services/api/**'
+      - '.github/workflows/**'
+      - '.github/scripts/**'
 jobs:
   purge-ghcr-images:
     name: Cleanup PR images from ghcr.io
