--- a/.github/workflows/ui-cleanup-pr-images.yaml
+++ b/.github/workflows/ui-cleanup-pr-images.yaml
@@ -4,10 +4,10 @@ on:
   pull_request:
     types: [closed]
     paths:
-      - ".nvmrc"
-      - "services/api/**"
-      - ".github/workflows/**"
-      - ".github/scripts/**"
+      - '.nvmrc'
+      - 'services/api/**'
+      - '.github/workflows/**'
+      - '.github/scripts/**'
 jobs:
   purge-ghcr-images:
     name: Cleanup PR images from ghcr.io
