--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -32,10 +32,10 @@ jobs:
           cache: "npm"
           cache-dependency-path: "services/api/package-lock.json"
       - name: Install dependencies
-        working-directory: services/ui
+        working-directory: services/api
         run: npm ci
       - name: Lint
-        working-directory: services/ui
+        working-directory: services/api
         run: npm run lint
   test:
     runs-on: ubuntu-latest
@@ -49,10 +49,10 @@ jobs:
           cache: "npm"
           cache-dependency-path: "services/api/package-lock.json"
       - name: Install dependencies
-        working-directory: services/ui
+        working-directory: services/api
         run: npm ci
       - name: Test
-        working-directory: services/ui
+        working-directory: services/api
         run: |
           npx playwright install-deps
           npx playwright install
@@ -60,7 +60,7 @@ jobs:
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: services/ui/src/coverage/cobertura-coverage.xml
+          filename: services/api/src/coverage/cobertura-coverage.xml
           badge: true
           fail_below_min: true
           format: markdown
