--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -78,7 +78,7 @@ jobs:
   #         path: code-coverage-results.md
   build:
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint]
     permissions:
       packages: write
     steps:
