--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,8 +8,8 @@
     "build:assets": "mkdir -p build && cp -r src/unified_graphics/static/geo build/geo",
     "clean": "del build/",
     "test": "echo 'No tests' && exit 1",
-    "lint": "prettier --check --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
-    "format": "prettier --write --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && stylelint --fix src/**/*.css",
+    "lint": "prettier --check --plugin-search-dir=. . && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
+    "format": "prettier --write --plugin-search-dir=. . && stylelint --fix src/**/*.css",
     "vendor": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
   },
   "devDependencies": {
