--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,7 +10,9 @@
     "test": "echo 'No tests' && exit 1",
     "lint": "prettier --check --plugin-search-dir=. . && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
     "format": "prettier --write --plugin-search-dir=. . && stylelint --fix src/**/*.css",
-    "vendor": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
+    "vendor": "run-p vendor:*",
+    "vendor:lodash": "echo 'export * from \"lodash-es\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/lodash.js --format es",
+    "vendor:d3": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -19,6 +21,7 @@
     "del-cli": "^5.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.3.0",
+    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
