--- a/services/data/pyproject.toml
+++ b/services/data/pyproject.toml
@@ -15,6 +15,7 @@ scipy = "^1.10.0"
 aiobotocore = {version = "*", extras = ["boto3"]}
 s3fs = "*"
 fsspec = "*"
+coverage = "^7.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
