Simplify the base manifests and move env config out
Keep our base manifests as bare-bones representations of our
deployments. We no longer need to pass through a local folder with
diag files present as we're reading Zarr from S3. Accordingly, add a
secret in order to inject the AWS environment variables to access the
Zarr array during local development.

--- a/kubernetes/overlays/dev/api/dev.api.env
+++ b/kubernetes/overlays/dev/api/dev.api.env
@@ -1,2 +1,2 @@
-FLASK_DIAG_DIR="/local-data"
-FLASK_ENV=development
+FLASK_DIAG_ZARR=s3://osti-modeling-dev-rtma-vis-prod/diagnostics.zarr
+FLASK_DEBUG=true
