--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,20 +15,20 @@ updates:
   - package-ecosystem: "pip"
     directory: "/services/api"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
 
   - package-ecosystem: "pip"
     directory: "/services/data"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
 
   - package-ecosystem: "npm"
     directory: "/services/api"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
