Switch to the nginx-unprivileged image
We won't be able to run OS updates since the image uses the nginx user.
Updated images are released weekly on Mondays so hopefully that will be
sufficient. The unprivileged image also uses 8080 as the default port so
we needed to explicitly expose port 80 to avoid having to change the
rest of our nginx and kubernetes configs.

--- a/services/api/Dockerfile-webserver
+++ b/services/api/Dockerfile-webserver
@@ -7,10 +7,10 @@ RUN npm clean-install
 COPY src/unified_graphics/static/ src/unified_graphics/static/
 RUN npm run vendor && npm run build
 
-FROM nginx:1.21
+FROM nginxinc/nginx-unprivileged:1.24
 
 COPY --from=build /home/node/app/build /usr/share/nginx/html/static
 COPY default.conf.template /etc/nginx/templates/
-RUN apt-get update \
-    && apt-get upgrade -y \
-    && rm -rf /var/lib/apt/lists/*
+
+# The default port exposed by the unprivileged image is 8080
+EXPOSE 80
