--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ aiobotocore = {version = "*", extras = ["boto3"]}
 fsspec = "*"
 s3fs = "*"
 zarr = "^2.14.1"
+flask-sqlalchemy = "^3.0.3"
+flask-alembic = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
