--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ flake8 = "^6.0.0"
 coverage = "^7.2.3"
 isort = "^5.10.1"
 
+[tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.0.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
