--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ fsspec = "*"
 s3fs = "*"
 zarr = "^2.14.1"
 flask-sqlalchemy = "^3.0.3"
-flask-alembic = "^2.0.1"
 psycopg = "^3.1.9"
+flask-migrate = "^4.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
