Downgrade to Python 3.9 and update dependencies
Added missing dependencies needed by the ETL pipeline and modified some
of the version requirements for existing dependencies to accommodate
botocore and boto3.

**Downgraded from Python 3.11 to 3.9.** The available Lambda docker
images from Amazon only support Python 3.9, so we are downgrading the
application Python version to 3.9 as well. We could, in the future, look
into using Nox or Tox to test against multiple versions of Python to
allow us to use 3.11 for the application, but I’m not sure we get much
of a win, since we still have to target 3.9 which means we miss out on
things like the new match statement anyway.

--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -8,13 +8,17 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.9"
 Flask = "^2.3.2"
 netCDF4 = "^1.6.3"
 xarray = "^2023.3.0"
-fsspec = "^2022.10.0"
-s3fs = "^2022.10.0"
-zarr = "^2.13.6"
+h5netcdf = "^1.1.0"
+scipy = "^1.10.0"
+# Use permissive versions to resolve dependency hell with boto3 & aiobotocore
+aiobotocore = {version = "*", extras = ["boto3"]}
+fsspec = "*"
+s3fs = "*"
+zarr = "^2.14.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
