Move the Dockerfile for Lambda to the API service
Rename the Dockerfile for the Lambda function to Dockerfile-diag-etl in
the API service. Update it to run the handler function from the
unified_graphics package instead of ugdata.

I’m pretty sure this is all we need to do to get this working. It feels
a little bad installing the whole unified_graphics package in the
container for the Lambda function, since it doesn’t need Flask or
anything like that. Maybe we can look into groups in poetry to at least
reduce the size of the dependencies.

--- a/services/api/Dockerfile-diag-etl
+++ b/services/api/Dockerfile-diag-etl
@@ -11,6 +11,6 @@ COPY poetry.lock .
 RUN poetry export --format requirements.txt --without dev --without-hashes --output requirements.txt \
     && pip install --target "${LAMBDA_TASK_ROOT}" --requirement requirements.txt
 
-COPY src/ugdata/ "${LAMBDA_TASK_ROOT}/ugdata"
+COPY src/unified_graphics/ "${LAMBDA_TASK_ROOT}/unified_graphics"
 
-CMD ["ugdata.aws.lambda_handler"]
+CMD ["unified_graphics.etl.aws.lambda_handler"]
