--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -8,13 +8,17 @@ on:
     # Path filters aren't evaluated for tags - https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore
     paths:
       - ".nvmrc"
-      - "services/api/**"
+      - "package.json"
+      - "package-lock.json"
+      - "src/*/static/**"
       - ".github/workflows/**"
       - ".github/scripts/**"
   pull_request:
     paths:
       - ".nvmrc"
-      - "services/api/**"
+      - "package.json"
+      - "package-lock.json"
+      - "src/*/static/**"
       - ".github/workflows/**"
       - ".github/scripts/**"
   workflow_dispatch: # Manually
@@ -30,12 +34,10 @@ jobs:
         with:
           node-version-file: ".nvmrc"
           cache: "npm"
-          cache-dependency-path: "services/api/package-lock.json"
+          cache-dependency-path: "package-lock.json"
       - name: Install dependencies
-        working-directory: services/api
         run: npm ci
       - name: Lint
-        working-directory: services/api
         run: npm run lint
   # test:
   #   runs-on: ubuntu-latest
@@ -87,7 +89,7 @@ jobs:
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Build & tag image
         run: |
-          docker build -t ${{ env.REGISTRY }}:${{ env.BRANCH }} -f services/api/Dockerfile-webserver services/api
+          docker build -t ${{ env.REGISTRY }}:${{ env.BRANCH }} -f docker/webserver/Dockerfile .
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
