--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,9 @@
+tmp/
+.github/
+
+# FIXME: Maybe we should lint/format the k8s files?
+kubernetes/
+
 # Python artifacts
 .pytest_cache
 .mypy_cache
