--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ s3fs = "*"
 zarr = "^2.14.1"
 flask-sqlalchemy = "^3.0.3"
 psycopg = "^3.1.9"
-flask-migrate = "^4.0.4"
+alembic = "^1.10.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
