Add a Postgres service for the testing job
Configure a Postgres container for running tests in CI.

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -60,6 +60,18 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+    services:
+      postgres:
+        image: "postgres:15.2"
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - "5432:5432"
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
@@ -72,8 +84,12 @@ jobs:
           poetry env use 3.9
           poetry install
       - name: Test
+        env:
+          TEST_DB_USER: "postgres"
+          TEST_DB_PASS: "postgres"
+          TEST_DB_HOST: "postgres:5432"
         run: |
-          poetry run coverage run -m pytest
+          poetry run coverage run -m pytest -xs --tb=no
           poetry run coverage report
           poetry run coverage xml
       - name: Code Coverage Report
