Disable tracebacks in the CI test output
Generally these are not that helpful, especially if the error is a SQL
error; we get long traces into SQLAlchemy's code and it just obscures
any other information in the output. In CI, I think, all we need to know
is what failed/errored; we can run the tests locally for more details.

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -84,12 +84,8 @@ jobs:
           poetry env use 3.9
           poetry install
       - name: Test
-        env:
-          TEST_DB_USER: "postgres"
-          TEST_DB_PASS: "postgres"
-          TEST_DB_HOST: "postgres:5432"
         run: |
-          poetry run coverage run -m pytest -xs --tb=no
+          poetry run coverage run -m pytest --tb=no
           poetry run coverage report
           poetry run coverage xml
       - name: Code Coverage Report
