Install the binary version of psycopg
This seems necessary to get the database connection working in the
container.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ fsspec = "*"
 s3fs = "*"
 zarr = "^2.14.1"
 flask-sqlalchemy = "^3.0.3"
-psycopg = "^3.1.9"
+psycopg = {version = "^3.1.9", extras = ["binary", "pool"]}
 alembic = "^1.10.4"
 
 [tool.poetry.dev-dependencies]
