--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:js": "rollup src/unified_graphics/static/js/*.js --format es --dir build/js/",
     "build:assets": "mkdir -p build && cp -r src/unified_graphics/static/geo build/geo && cp src/unified_graphics/static/*icon.* build",
     "clean": "del build/",
-    "test": "echo 'No tests' && exit 1",
+    "test": "web-test-runner --coverage",
     "lint": "prettier --check --plugin-search-dir=. . && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
     "format": "prettier --write --plugin-search-dir=. . && stylelint --fix src/**/*.css",
     "vendor": "run-p vendor:*",
@@ -15,7 +15,10 @@
     "vendor:d3": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
   },
   "devDependencies": {
+    "@open-wc/testing": "^3.1.8",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@web/test-runner": "^0.16.1",
+    "@web/test-runner-playwright": "^0.10.0",
     "cssnano": "^6.0.0",
     "d3": "^7.8.4",
     "del-cli": "^5.0.0",
@@ -27,6 +30,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.7",
     "rollup": "^3.20.2",
+    "sinon": "^15.1.0",
     "stylelint": "^15.4.0",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^3.0.0"
