Add an RBAC role
The init containers need explicit permission talk to the control plane.

--- a/kubernetes/overlays/dev/api/kustomization.yaml
+++ b/kubernetes/overlays/dev/api/kustomization.yaml
@@ -1,5 +1,9 @@
 bases:
   - ../../../base/api
+
+resources:
+  - "rbac.yaml"
+
 images:
   - name: unified-graphics/api
     newName: ghcr.io/noaa-gsl/unified-graphics/api
