--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ zarr = "^2.14.1"
 flask-sqlalchemy = "^3.0.3"
 psycopg = {version = "^3.1.9", extras = ["binary", "pool"]}
 alembic = "^1.10.4"
+pyarrow = "^12.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
