--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ isort = "^5.10.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
+pandas-stubs = "^2.0.2.230605"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
