Add a utility to help with S3 object renaming
I've created a script to do the bulk renaming that is hardcoded to our
bucket and timestamp pattern. Ideally, that wouldn't be the case but I
figure we can always make this script more flexible if the need arises.

I've also added a handy poetry entrypoint so that this can be run with
"poetry run".

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
+
+[tool.poetry.scripts]
+s3_bulk_rename = "utils.s3.s3_bulk_renaming:main"
