--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ isort = "^5.10.1"
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
 pandas-stubs = "^2.0.2.230605"
+moto = {extras = ["server"], version = "^4.1.12"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
