--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -9,12 +9,14 @@ on:
     paths:
       - "src/**/*.py"
       - "src/**/*.html"
+      - "tests/**/*"
       - ".github/workflows/**"
       - ".github/scripts/**"
   pull_request:
     paths:
       - "src/**/*.py"
       - "src/**/*.html"
+      - "tests/**/*"
       - ".github/workflows/**"
       - ".github/scripts/**"
   workflow_dispatch: # Manually
