--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -87,7 +87,7 @@ jobs:
           poetry install
       - name: Test
         run: |
-          poetry run coverage run -m pytest --tb=no tests/
+          poetry run coverage run -m pytest tests/
           poetry run coverage report
           poetry run coverage xml
       - name: Code Coverage Report
