--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -14,6 +14,8 @@ on:
       - ".github/scripts/**"
       - "pyproject.toml"
       - "poetry.lock"
+      - "docker/app/**"
+      - "docker/diag-etl/**"
   pull_request:
     paths:
       - "src/**/*.py"
@@ -23,6 +25,8 @@ on:
       - ".github/scripts/**"
       - "pyproject.toml"
       - "poetry.lock"
+      - "docker/app/**"
+      - "docker/diag-etl/**"
   workflow_dispatch: # Manually
 env:
   REGISTRY: ghcr.io/noaa-gsl/unified-graphics
