--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
       interval: "weekly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
+    assignees:
+      - "ian-noaa"
 
   - package-ecosystem: "docker"
     directory: "/"
@@ -18,24 +20,31 @@ updates:
       interval: "weekly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
+    assignees:
+      - "ian-noaa"
 
   - package-ecosystem: "pip"
-    directory: "/services/api"
+    directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
-
-  - package-ecosystem: "pip"
-    directory: "/services/data"
-    schedule:
-      interval: "monthly"
-    pull-request-branch-name:
-      separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
+    assignees:
+      - "ian-noaa"
+    groups:
+      all:
+        patterns:
+        - "*"
 
   - package-ecosystem: "npm"
-    directory: "/services/api"
+    directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
     pull-request-branch-name:
       separator: "-" # Use "-" instead of "/" in branch names to avoid issues with docker registries
+    assignees:
+      - "ian-noaa"
+    groups:
+      all:
+        patterns:
+        - "*"
