Separate out the NPM linter scripts
We want more control over which linters we run, when, so that we can
separate out CI jobs for linting our JS code and our Markdown docs.
While we're at it, remove the deprecated Prettier "--plugin-search-dir"
flag.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "build:assets": "mkdir -p build && cp -r src/unified_graphics/static/geo build/geo && cp src/unified_graphics/static/*icon.* build",
     "clean": "del build/",
     "test": "echo 'No tests' && exit 1",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
-    "format": "prettier --write --plugin-search-dir=. . && stylelint --fix src/**/*.css",
+    "lint": "run-p lint:prettier:docs lint:prettier:code lint:eslint lint:css",
+    "lint:code": "run-p lint:prettier:code lint:eslint lint:css",
+    "lint:css": "stylelint src/**/*.css",
+    "lint:eslint": "eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*'",
+    "lint:prettier:docs": "prettier --check '**/*.md'",
+    "lint:prettier:code": "prettier --check '.' '!**/*.md'",
+    "format": "prettier --write . && stylelint --fix src/**/*.css",
     "vendor": "run-p vendor:*",
     "vendor:lodash": "echo 'export * from \"lodash-es\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/lodash.js --format es",
     "vendor:d3": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
