--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Lint
-        run: npm run lint
+        run: npm run lint:code
   # test:
   #   runs-on: ubuntu-latest
   #   permissions:
