--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,5 +27,5 @@ repos:
     rev: v2.7.1
     hooks:
       - id: prettier
-        types_or: [css, javascript, json, yaml]
+        types_or: [css, javascript, json, yaml, markdown]
         exclude: .github/workflows/.*\.yaml
