Install prettier directly
This removes a dependency on our project NPM setup for this CI job.
Configuring NPM and installing our dependencies currently takes over
half this CI job runs for so it'll be interesting to see if this speeds
that up any.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,11 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
-          cache-dependency-path: "package-lock.json"
       - name: Install dependencies
-        run: npm ci
+        run: npm install prettier
       - name: Lint
-        run: npm run lint:prettier:docs
+        run: npx prettier --check **/*.md
