--- a/kubernetes/base/app/deployment.yaml
+++ b/kubernetes/base/app/deployment.yaml
@@ -2,27 +2,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: api
+    app.kubernetes.io/name: app
     # app.kubernetes.io/instance:
     app.kubernetes.io/part-of: unified-graphics
     app.kubernetes.io/component: backend
-    app: unified-graphics-api
+    app: unified-graphics-app
     tier: backend
-  name: unified-graphics-api
+  name: unified-graphics-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: unified-graphics-api
+      app: unified-graphics-app
   template:
     metadata:
       labels:
-        app: unified-graphics-api
+        app: unified-graphics-app
     spec:
       containers:
-        - image: unified-graphics/api
+        - image: unified-graphics/app
           imagePullPolicy: Always # Since we're tracking a long-lived tag, we'll want to always check for updated images
-          name: unified-graphics-api
+          name: unified-graphics-app
           ports:
             - containerPort: 80
               protocol: TCP
