--- a/kubernetes/overlays/dev/app/deployment.yaml
+++ b/kubernetes/overlays/dev/app/deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: unified-graphics-api
+  name: unified-graphics-app
 spec:
   template:
     spec:
       containers:
-        - name: unified-graphics-api
+        - name: unified-graphics-app
           envFrom:
             - secretRef:
-                name: unified-graphics-api-secret
+                name: unified-graphics-app-secret
             - configMapRef:
-                name: unified-graphics-api-config
+                name: unified-graphics-app-config
           # FIXME - we should explore dissallowing privilege escalation
           securityContext:
             allowPrivilegeEscalation: true # Default behavior
