--- a/kubernetes/base/webserver/deployment.yaml
+++ b/kubernetes/base/webserver/deployment.yaml
@@ -2,27 +2,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: ui
+    app.kubernetes.io/name: webserver
     # app.kubernetes.io/instance:
     app.kubernetes.io/part-of: unified-graphics
     app.kubernetes.io/component: frontend
-    app: unified-graphics-ui
+    app: unified-graphics-webserver
     tier: frontend
-  name: unified-graphics-ui
+  name: unified-graphics-webserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: unified-graphics-ui
+      app: unified-graphics-webserver
   template:
     metadata:
       labels:
-        app: unified-graphics-ui
+        app: unified-graphics-webserver
     spec:
       containers:
-        - image: unified-graphics/ui
+        - image: unified-graphics/webserver
           imagePullPolicy: Always # Since we're tracking a long-lived tag, we'll want to always check for updated images
-          name: unified-graphics-ui
+          name: unified-graphics-webserver
           ports:
             - containerPort: 80
               protocol: TCP
