--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -101,7 +101,7 @@ jobs:
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          header: API Coverage
+          header: App Coverage
           filename: coverage.xml
           badge: true
           fail_below_min: true
@@ -128,7 +128,7 @@ jobs:
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Build & tag image
         run: |
-          docker build -t ${{ env.REGISTRY }}/api:${{ env.BRANCH }} -f docker/app/Dockerfile .
+          docker build -t ${{ env.REGISTRY }}/app:${{ env.BRANCH }} -f docker/app/Dockerfile .
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -137,7 +137,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push image
         run: |
-          docker push ${{ env.REGISTRY }}/api:${{ env.BRANCH }}
+          docker push ${{ env.REGISTRY }}/app:${{ env.BRANCH }}
   build_diag_etl:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test]
@@ -169,7 +169,7 @@ jobs:
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "${{ env.REGISTRY }}/api:${{ env.BRANCH }}"
+          image-ref: "${{ env.REGISTRY }}/app:${{ env.BRANCH }}"
           format: "sarif"
           output: "trivy-results.sarif"
           ignore-unfixed: true
@@ -233,9 +233,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
       - name: retag image and push
         run: |
-          docker pull ${{ env.REGISTRY }}/api:${{ env.BRANCH }}
-          docker tag ${{ env.REGISTRY }}/api:${{ env.BRANCH }} ${{ secrets.AWS_REGISTRY }}/api:${{ env.BRANCH }}
-          docker push ${{ secrets.AWS_REGISTRY }}/api:${{ env.BRANCH }}
+          docker pull ${{ env.REGISTRY }}/app:${{ env.BRANCH }}
+          docker tag ${{ env.REGISTRY }}/app:${{ env.BRANCH }} ${{ secrets.AWS_REGISTRY }}/app:${{ env.BRANCH }}
+          docker push ${{ secrets.AWS_REGISTRY }}/app:${{ env.BRANCH }}
           docker pull ${{ env.REGISTRY }}/data:${{ env.BRANCH }}
           docker tag ${{ env.REGISTRY }}/data:${{ env.BRANCH }} ${{ secrets.AWS_REGISTRY }}/data:${{ env.BRANCH }}
           docker push ${{ secrets.AWS_REGISTRY }}/data:${{ env.BRANCH }}
