Switch to a specific release of our trivy CI action
We now have dependabot to help keep up with updates so it's safer to
track a released version. I'm also hoping using a particular release
will resolve a CI failure we've been seeing.

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -167,7 +167,7 @@ jobs:
       - name: Extract branch/tag name
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           image-ref: "${{ env.REGISTRY }}/api:${{ env.BRANCH }}"
           format: "sarif"
@@ -191,7 +191,7 @@ jobs:
       - name: Extract branch/tag name
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           image-ref: "${{ env.REGISTRY }}/data:${{ env.BRANCH }}"
           format: "sarif"
