--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -109,7 +109,7 @@ jobs:
       - name: Extract branch/tag name
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.14.0
         with:
           image-ref: "${{ env.REGISTRY }}:${{ env.BRANCH }}"
           format: "sarif"
