Enable severity limiting for Trivy's sarif output
For some reason the Trivy GitHub action has decided to ignore the
severity configuration unless also given the
"limit-severities-for-sarif" config. Trivy v0.14 fixed a bug that was
hiding the return value. However, this meant that Trivy was now
returning as failed for any low and medium severities.

--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -116,6 +116,7 @@ jobs:
           output: "trivy-results.sarif"
           ignore-unfixed: true
           severity: "CRITICAL,HIGH"
+          limit-severities-for-sarif: true
           exit-code: "1"
         env:
           TRIVY_USERNAME: ${{ github.actor }}
