--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -174,6 +174,7 @@ jobs:
           output: "trivy-results.sarif"
           ignore-unfixed: true
           severity: "CRITICAL,HIGH"
+          limit-severities-for-sarif: true
           exit-code: "1"
         env:
           TRIVY_USERNAME: ${{ github.actor }}
@@ -198,6 +199,7 @@ jobs:
           output: "trivy-results.sarif"
           ignore-unfixed: true
           severity: "CRITICAL,HIGH"
+          limit-severities-for-sarif: true
           exit-code: "1"
         env:
           TRIVY_USERNAME: ${{ github.actor }}
