--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10-slim-bullseye
 WORKDIR /usr/src/app
 
 RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel \
-    pip3 install --no-cache-dir gunicorn poetry \
+    && pip3 install --no-cache-dir gunicorn poetry \
     && poetry config virtualenvs.create false
 
 COPY . .
